--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
 #    Module:
-#        class: Ndv\NewsBundle\Service\ModuleService
+#        class: Modules\NewsBundle\Service\ModuleService
 #        arguments: [ "@doctrine.orm.entity_manager", @service_container, @Entities, @Objects]
