--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-ndv_news_homepage:
+modules_news_homepage:
     path:     /site/news/{theme}
-    defaults: { _controller: NdvNewsBundle:News:index, "theme": "default" }
+    defaults: { _controller: ModulesNewsBundle:News:index, "theme": "default" }
