--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name" : "smcr/modules-news",
 	"description" : "A demo news bundle",
 	"type" : "symfony-bundle",
+	"version": "0.8",
 	"authors" : [{
 		"name" : "demo",
 		"email" : "demo@company.com"
@@ -24,7 +25,7 @@
 	}],
 	"extra" : {
 		"branch-alias" : {
-			"dev-master" : "0.7"
+			"dev-master" : "0.8"
 		}
 	}
 }
