--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name" : "rcms/newsbundle",
 	"description" : "A news demo bundle",
-	"type" : "rcms-module",
+	"type" : "library",
 	"version": "0.8.5",
 	"authors" : [{
 		"name" : "demo",
