--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
 	"keywords" : [
 		"rcms news demo bundle"
 	],
+        "require": {
+	    "rcms/composer-custom-directory-installer": "*"
+	},
 	"license" : [
 		"MIT"
 	],
